--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "jest --watchAll --verbose ./dist/tests/test.js"
+    "test": "jest --watchAll --verbose --testMatch ./dist/tests/test.js"
   },
   "dependencies": {
     "@babel/preset-typescript": "^7.10.4",
