--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "jest --verbose ./tests/test.ts"
+    "test": "jest --verbose --forceExit ./tests/test.ts"
   },
   "engines": {
     "node": "12.18.3"
